# hik_camera_demo

./: CMakeLists.txt  hik_camera.cpp  hik_camera.h  main.cpp
config/: 00F02724098.txt
